--- a/task_manager/tasks/templates/add_task.html
+++ b/task_manager/tasks/templates/add_task.html
@@ -1,10 +1,5 @@
-{% extends 'index.html' %}
-
-{% block content %}
-  <h1>Add Task</h1>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Add</button>
-  </form>
-{% endblock %}
+<form action="{% url 'add_task' %}" method="POST">
+  {% csrf_token %}
+  {{ form.as_p }}
+  <button type="submit">Dodaj zadanie</button>
+</form>
