--- a/task_manager/tasks/templates/delete_task.html
+++ b/task_manager/tasks/templates/delete_task.html
@@ -1,10 +1,5 @@
-{% extends 'index.html' %}
-
-{% block content %}
-  <h1>Delete Task</h1>
-  <p>Are you sure you want to delete "{{ task.name }}"?</p>
-  <form method="post">
-    {% csrf_token %}
-    <button type="submit">Delete</button>
-  </form>
-{% endblock %}
+<p>Czy na pewno chcesz usunąć zadanie "{{ task.title }}"?</p>
+<form action="{% url 'delete_task' task.id %}" method="POST">
+  {% csrf_token %}
+  <button type="submit">Usuń</button>
+</form>
