--- a/task_manager/tasks/templates/task_list.html
+++ b/task_manager/tasks/templates/task_list.html
@@ -1,10 +1,20 @@
-{% extends 'index.html' %}
-
-{% block content %}
-  <h1>Task List</h1>
-  <ul>
-    {% for task in tasks %}
-      <li>{{ task.name }}</li>
-    {% endfor %}
-  </ul>
-{% endblock %}
+<table>
+  <!-- ... -->
+  {% for task in tasks %}
+  <tr>
+    <td>{{ task.title }}</td>
+    <td>{{ task.description }}</td>
+    <td>{{ task.priority }}</td>
+    <td>{{ task.due_date }}</td>
+    <td>
+      <a href="{% url 'update_task' task.id %}">Edytuj</a>
+    </td>
+    <td>
+      <form action="{% url 'delete_task' task.id %}" method="POST">
+        {% csrf_token %}
+        <button type="submit">Usuń</button>
+      </form>
+    </td>
+  </tr>
+  {% endfor %}
+</table>
